syntax = "proto3";
package auth;

option go_package = "github.com/ksusonic/gophkeeper/proto/auth";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
}

// Register

message RegisterRequest {
  string Email = 1;
  string Password = 2;
}

message RegisterResponse {
  int32 Status = 1;
  string Error = 2;
}

// Login

message LoginRequest {
  string Email = 1;
  string Password = 2;
}

message LoginResponse {
  int32 Status = 1;
  string Token = 2;
  string Error = 3;
}
