syntax = "proto3";
package secret;

option go_package = "github.com/ksusonic/gophkeeper/proto/secret";

import "google/protobuf/struct.proto";
import "google/protobuf/any.proto";

message Secret {
  string Name = 1;
  int32 Version = 2;
  google.protobuf.Struct Meta = 3;
  oneof Value {
    AuthenticationData AuthData = 4;
    string Text = 5;
    google.protobuf.Any Any = 6;
    CreditCardData CreditCardData = 7;
  }
}

message AuthenticationData {
  string Login = 1;
  string RawPassword = 2;
}

message CreditCardData {
  string Pan = 1;
  string ChName = 2;
  string ExpirationDate = 3;

  reserved "Cvv", "CVV"; // storage is prohibited by PCI-DSS
}
