syntax = "proto3";
package service;

option go_package = "github.com/ksusonic/gophkeeper/proto/service";

import "proto/data/secret.proto";

service SecretService {
  rpc SetSecret(SetSecretRequest) returns (SetSecretResponse) {}
  rpc GetSecret(GetSecretRequest) returns (GetSecretResponse) {}
  rpc GetAllSecrets(GetAllSecretsRequest) returns (GetAllSecretsResponse) {}
}

message SetSecretRequest {
  secret.Secret Secret = 1 [json_name = "secret"];
}

message SetSecretResponse {
}

message GetSecretRequest {
  string Name = 1 [json_name = "name"];
}

message GetSecretResponse {
  secret.Secret Secret = 1 [json_name = "secret"];
}

message GetAllSecretsRequest {
}

message GetAllSecretsResponse {
  repeated secret.Secret Secrets = 1 [json_name = "secrets"];
}
